--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -74,6 +74,8 @@
 				font-weight: 800;
 				letter-spacing: 0.015em;
 				margin-right: 5px;
+				cursor: pointer;
+				user-select: none;
 
 				&:last-child{
 					margin-right: 0;
@@ -83,6 +85,7 @@
 					background: #ffffff75;
 					box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
 					border-radius: 5px;
+					transition: background-color 0.2s;
 				}
 
 				&.active{
@@ -124,6 +127,7 @@
 		padding: 0px 20px;
 		margin-right: 9px;
 		cursor: pointer;
+		user-select: none;
 
 		&:hover{
 			background: darken(#F9F9F9, 5%)
@@ -155,6 +159,7 @@
 			color: #FE5F1E;
 			border-bottom: 1px dotted #FE5F1E;
 			cursor: pointer;
+			user-select: none;
 		}
 	}
 
@@ -175,6 +180,7 @@
 			li{
 				padding: 10px 15px;
 				cursor: pointer;
+				user-select: none;
 
 				&.active, &:hover{
 					background: lighten(#FE5F1E, 41%)
@@ -185,99 +191,6 @@
 					color: #FE5F1E;
 				}
 			}
-		}
-	}
-}
-
-.button{
-	transition: all 0.1s;
-	user-select: none;
-	background: #FE5F1E;
-	border-radius: 30px;
-	cursor: pointer;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-
-	i{
-		margin-left: 5px;
-		font-family: 'Proximanova-rus';
-		font-style: normal;
-		font-weight: 800;
-		font-size: 13px;
-		color: #fff;
-		width: 22px;
-		height: 22px;
-		background-color: #EB5A1E;
-		text-align: center;
-		line-height: 22px;
-		border-radius: 30px;
-	}
-
-	&:hover{
-		background: darken(#FE5F1E, 5%);
-
-		i{
-			background-color: #FFFFFF;
-			color: #EB5A1E;
-		}
-		
-		span{
-			color: #fff;
-		}
-
-		svg{
-			path{
-				fill: #fff;
-			}
-		}
-	}
-
-	&:active{
-		background: darken(#FE5F1E, 10%);
-	}
-
-	&__delimiter{
-		background: rgba(255, 255, 255, 0.25);
-		width: 1px;
-		height: 25px;
-	}
-
-	span{
-		font-family: 'Proximanova-rus';
-		font-weight: 800;
-		font-size: 16px;
-		line-height: 19px;
-		color: #fff;
-	}
-
-	&_cart{
-		width: 150px;
-		height: 50px;
-		padding: 0px 15px;
-	}
-
-	&_add{
-		height: 40px;
-		padding: 0px 15px;
-
-		svg{
-			margin-right: 7px;
-		}
-	}
-
-	&_outline{
-		background: #FFFFFF;
-		border: 1px solid #EB5A1E;
-
-		svg{
-			path{
-				fill: #EB5A1E;
-			}
-		}
-
-		span{
-			color: #EB5A1E;
 		}
 	}
 }
