--- a/styles/style.scss
+++ b/styles/style.scss
@@ -67,6 +67,8 @@ h1, h2, h3, h4, h5, h6{font-weight: inherit; font-size: inherit;}
 //<Подключение стилей>
 @import '_header.scss';
 @import '_main.scss';
+@import '_cart.scss';
+@import '_button.scss';
 //</Подключение стилей>
 
 
