Добавил интерактивности, доп. компоненты

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -150,6 +150,16 @@
 		line-height: 17px;
 		letter-spacing: 0.015em;
 
+		svg{
+			margin-right: 5px;
+			transform: rotate(180deg);
+			transition: transform 0.5s;
+
+			&.rotated{
+				transform: rotate(0deg);
+			}
+		}
+
 		b{
 			margin-right: 5px;
 		}
