--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -15,6 +15,8 @@
 			width: 38px;
 			height: 38px;
 			margin-right: 17px;
+			transform: rotate(0deg);
+			transition: transform 1s;
 
 			&:hover{
 				transform: rotate(360deg);
