--- a/styles/style.scss
+++ b/styles/style.scss
@@ -76,11 +76,12 @@ h1, h2, h3, h4, h5, h6{font-weight: inherit; font-size: inherit;}
 
 body{
 	background-color: #FFDF8C;
+	padding: 50px 0px;
 }
 
 .wrapper{
 	max-width: 1340px;
-	margin: 50px auto;
+	margin: 0px auto 50px;
 	background: #FFFFFF;
 	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.03);
 	border-radius: 10px;
