--- a/styles/style.scss
+++ b/styles/style.scss
@@ -77,6 +77,7 @@ h1, h2, h3, h4, h5, h6{font-weight: inherit; font-size: inherit;}
 body{
 	background-color: #FFDF8C;
 	padding: 50px 0px;
+	overflow-y: scroll;
 }
 
 .wrapper{
