--- a/styles/style.scss
+++ b/styles/style.scss
@@ -69,6 +69,7 @@ h1, h2, h3, h4, h5, h6{font-weight: inherit; font-size: inherit;}
 @import '_main.scss';
 @import '_cart.scss';
 @import '_button.scss';
+@import '_modal.scss';
 //</Подключение стилей>
 
 
