--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -30,6 +30,10 @@
 	margin-bottom: 65px;
 	padding: 0px 17.5px;
 
+	&__price {
+		margin-left: 20px;
+	}
+
 	&__image{
 		height: 260px;
 		width: 260px;
