--- a/styles/_cart.scss
+++ b/styles/_cart.scss
@@ -1,301 +1,298 @@
 .cart-container {
-	padding: 50px 0px 130px;
-	max-width: 1225px; 
-	margin: 0 auto; 
-	width: 100%;
+  padding: 50px 0px 130px;
+  max-width: 1225px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .cart {
-	width: 800px;
-	margin: 0 auto;
+  width: 800px;
+  margin: 0 auto;
 
-	&__top{
-		margin-bottom: 30px;
-	}
+  &__top {
+    margin-bottom: 30px;
+  }
 
-	&__total {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		margin-bottom: 40px;
-	}
+  &__total {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 40px;
+  }
 
-	&__button-row {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
+  &__button-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .cart-header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-	&__hider{
-		height: 39px;
-		width: 100px;
-		position: absolute;
-		left: 43px;
-		background-color: #fff;
-	}
+  &__hider {
+    height: 39px;
+    width: 100px;
+    position: absolute;
+    left: 43px;
+    background-color: #fff;
+  }
 
-	&__label {
-		display: flex;
-		align-items: center;
-		position: relative;
-		cursor: default;
+  &__label {
+    display: flex;
+    align-items: center;
+    position: relative;
+    cursor: default;
 
+    &:hover {
+      svg {
+        transform: translate(50px, 0px);
+        transition: transform 1s;
+      }
+    }
 
-		&:hover{
-			svg{
-				transform: translate(50px, 0px);
-				transition: transform 1s;
-			}
-		}
+    svg {
+      transform: translate(0px, 0px);
+      transition: transform 1s;
+      margin-right: 12px;
+    }
 
-		svg{
-			transform: translate(0px, 0px);
-			transition: transform 1s;
-			margin-right: 12px;
-		}
+    span {
+      font-weight: 800;
+      font-size: 32px;
+      line-height: 39px;
+      letter-spacing: 0.01em;
+      color: #3f3f3f;
+      z-index: 10;
+    }
+  }
 
-		span{
-			font-weight: 800;
-			font-size: 32px;
-			line-height: 39px;
-			letter-spacing: 0.01em;
-			color: #3F3F3F;
-			z-index: 10;
-		}
-	}
+  &__cleaner {
+    display: flex;
+    align-items: center;
 
-	&__cleaner {
-		display: flex;
-		align-items: center;
+    svg {
+      margin-right: 7px;
+    }
 
-		svg{
-			margin-right: 7px;
-		}
+    span {
+      font-family: "Proximanova";
+      font-size: 16px;
+      line-height: 19px;
+      color: #b6b6b6;
+    }
 
-		span{
-			font-family: 'Proximanova';
-			font-size: 16px;
-			line-height: 19px;
-			color: #B6B6B6;
-		}
+    &:hover {
+      cursor: pointer;
 
-		&:hover{
-			cursor: pointer;
+      span {
+        color: #fe5f1e;
+      }
 
-			span{
-				color: #FE5F1E;
-			}
-
-			svg{
-				path{
-					stroke:#FE5F1E;
-				}
-			}
-		}
-	}
+      svg {
+        path {
+          stroke: #fe5f1e;
+        }
+      }
+    }
+  }
 }
 
 .cart-item {
-	display: flex;
-	align-items: center;
-	padding-top: 30px;
-	border-top: 1px solid #F4F4F4 ;
-	margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  padding-top: 30px;
+  border-top: 1px solid #f4f4f4;
+  margin-bottom: 30px;
 
-	&:last-child{
-		margin-bottom: 40px;
-	}
-	
-	&__description {
-		display: flex;
-		align-items: center;
-		flex: 1 1 450px;
+  &:last-child {
+    margin-bottom: 40px;
+  }
 
-		span{
-			font-family: 'Proximanova';
-			font-size: 18px;
-			line-height: 22px;
-			letter-spacing: 0.01em;
-			color: #8D8D8D;
-		}
+  &__description {
+    display: flex;
+    align-items: center;
+    flex: 1 1 450px;
 
-		h3{
-			font-weight: 800;
-			font-size: 22px;
-			line-height: 27px;
-			letter-spacing: 0.01em;
-			margin-bottom: 3px;
-		}
+    span {
+      font-family: "Proximanova";
+      font-size: 18px;
+      line-height: 22px;
+      letter-spacing: 0.01em;
+      color: #8d8d8d;
+    }
 
-		img{
-			width: 80px;
-			height: 80px;
-			overflow: hidden;
-			margin-right: 15px;
-		}
-	}
+    h3 {
+      font-weight: 800;
+      font-size: 22px;
+      line-height: 27px;
+      letter-spacing: 0.01em;
+      margin-bottom: 3px;
+    }
 
-	&__counter {
-		display: flex;
-		align-items: center;
-		flex: 1 1 102px;
-		user-select: none;
+    img {
+      width: 80px;
+      height: 80px;
+      overflow: hidden;
+      margin-right: 15px;
+    }
+  }
 
-		svg {
-			&.disabled {
-				pointer-events: none;
-				
-				circle{
-					stroke: #B6B6B6;
-				}
+  &__counter {
+    display: flex;
+    align-items: center;
+    flex: 1 1 102px;
+    user-select: none;
 
-				path{
-					fill: #B6B6B6;
-				}
-			}
-		}
+    span {
+      font-weight: 800;
+      font-size: 22px;
+      line-height: 27px;
+      letter-spacing: 0.01em;
+      padding: 0px 12px;
+    }
 
-		span{
-			font-weight: 800;
-			font-size: 22px;
-			line-height: 27px;
-			letter-spacing: 0.01em;
-			padding: 0px 12px;
-		}
+    a {
+      cursor: pointer;
 
-		a{
-			cursor: pointer;
-		}
-	}
+      &.disabled {
+        pointer-events: none;
 
-	&__price {
-		font-weight: 800;
-		font-size: 22px;
-		line-height: 27px;
-		letter-spacing: 0.01em;
-		flex: 1 1 245px;
-		text-align: center;
-	}
+        svg {
+          circle {
+            stroke: #b6b6b6;
+          }
 
-	&__delete {
-		cursor: pointer;
+          path {
+            fill: #b6b6b6;
+          }
+        }
+      }
+    }
+  }
 
-		&:hover{
-			svg{
+  &__price {
+    font-weight: 800;
+    font-size: 22px;
+    line-height: 27px;
+    letter-spacing: 0.01em;
+    flex: 1 1 245px;
+    text-align: center;
+  }
 
-				circle{
-					stroke: #FE5F1E;
-				}
+  &__delete {
+    cursor: pointer;
 
-				path{
-					fill: #FE5F1E;
-				}
-			}
-		}
-	}
+    &:hover {
+      svg {
+        circle {
+          stroke: #fe5f1e;
+        }
+
+        path {
+          fill: #fe5f1e;
+        }
+      }
+    }
+  }
 }
 
 .total {
+  &__amount {
+    font-size: 22px;
+    line-height: 27px;
+    letter-spacing: 0.01em;
 
-	&__amount {
-		font-size: 22px;
-		line-height: 27px;
-		letter-spacing: 0.01em;
+    span {
+      font-family: "Proximanova";
+    }
 
-		span{
-			font-family: 'Proximanova';
-		}
+    b {
+      font-weight: 800;
+    }
+  }
 
-		b{
-			font-weight: 800;
-		}
-	}
+  &__sum {
+    font-size: 22px;
+    line-height: 27px;
+    letter-spacing: 0.01em;
 
-	&__sum {
-		font-size: 22px;
-		line-height: 27px;
-		letter-spacing: 0.01em;
+    span {
+      font-family: "Proximanova";
+    }
 
-		span{
-			font-family: 'Proximanova';
-		}
-
-		b{
-			font-weight: 800;
-			color: #FE5F1E;
-		}
-	}
+    b {
+      font-weight: 800;
+      color: #fe5f1e;
+    }
+  }
 }
 
 .cart-empty {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-	&__label {
-		font-weight: 800;
-		font-size: 32px;
-		line-height: 32px;
-		letter-spacing: 0.01em;
-		display: flex;
-		margin-bottom: 10px;
+  &__label {
+    font-weight: 800;
+    font-size: 32px;
+    line-height: 32px;
+    letter-spacing: 0.01em;
+    display: flex;
+    margin-bottom: 10px;
 
-		img{
-			width: 32px;
-			height: 32px;
-			overflow: hidden;
-		}
+    img {
+      width: 32px;
+      height: 32px;
+      overflow: hidden;
+    }
 
-		span{
-			margin-right: 10px;
-		}
-	}
+    span {
+      margin-right: 10px;
+    }
+  }
 
-	&__message {
-		font-family: 'Proximanova';
-		font-size: 18px;
-		text-align: center;
-		letter-spacing: 0.01em;
-		color: #777777;
-		margin-bottom: 45px;
+  &__message {
+    font-family: "Proximanova";
+    font-size: 18px;
+    text-align: center;
+    letter-spacing: 0.01em;
+    color: #777777;
+    margin-bottom: 45px;
 
-		span{
-			display: block;
-			margin-bottom: 10px;
-		}
-	}
+    span {
+      display: block;
+      margin-bottom: 10px;
+    }
+  }
 
-	&__image {
-		margin-bottom: 75px;
-		height: 255px;
-		width: 300px;
-		overflow: hidden;
-	}
+  &__image {
+    margin-bottom: 75px;
+    height: 255px;
+    width: 300px;
+    overflow: hidden;
+  }
 
-	&__button {
-		background: #282828;
-		border-radius: 30px;
-		color: #fff;
-		font-weight: 800;
-		font-size: 16px;
-		line-height: 19px;
-		letter-spacing: 0.015em;
-		padding: 16px 25px;
-		user-select: none;
-		cursor: pointer;
+  &__button {
+    background: #282828;
+    border-radius: 30px;
+    color: #fff;
+    font-weight: 800;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.015em;
+    padding: 16px 25px;
+    user-select: none;
+    cursor: pointer;
 
-		&:hover{
-			background-color: #FE5F1E;
-		}
+    &:hover {
+      background-color: #fe5f1e;
+    }
 
-		&:active{
-			background-color: darken(#FE5F1E, 5%);
-		}
-	}
+    &:active {
+      background-color: darken(#fe5f1e, 5%);
+    }
+  }
 }
