--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -53,6 +53,7 @@
     line-height: 24px;
     letter-spacing: 0.01em;
     margin-bottom: 22px;
+    text-align: center;
     cursor: pointer;
   }
 
@@ -189,7 +190,7 @@
     top: 30px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
     border-radius: 10px;
-    width: 140px;
+    width: 160px;
     padding: 13px 0px;
     z-index: 100;
     background-color: #ffffff;
